# CNN-Photon-ID

./: README.md
Array/: NTupleToNumpy.py  README.md  features.txt  features_hh.txt  samples.txt
CellsToImage/: README.md  toImage.py
DerivationFrameworkCNNPID/: CMakeLists.txt  README.md
DerivationFrameworkCNNPID/DerivationFrameworkCNNPID/: CNNHandler.h  CellsHandler.h  PhotonID.h
DerivationFrameworkCNNPID/python/: DerivationFrameworkCNNPIDFactories.py
DerivationFrameworkCNNPID/share/: EGAM3.py
DerivationFrameworkCNNPID/src/: CNNHandler.cxx  CellsHandler.cxx  PhotonID.cxx
DerivationFrameworkCNNPID/src/components/: DerivationFrameworkCNNPID_entries.cxx  DerivationFrameworkCNNPID_load.cxx
NTuple/: README.md
NTuple/CleanAndGet/: CleanAndGet.h  Variables.h
NTuple/Root/: CleanAndGet.cxx  LinkDef.h
NTuple/cmt/: Makefile.RootCore
NTuple/run/: output_Strategy_IsoTight_1_Zlly.root  output_Strategy_IsoTight_2_Zlly.root  output_Strategy_IsoTight_4_Zlly.root  run.sh
NTuple/util/: runCleanAndGet.cxx
TemplateFit/: ComputeEff.C  TemplateFit.C
Train/: reweighting.py  runonnx.py  toonnx.py  train.py
Train/DataProcessing/: DataProcessing.py
Train/Models/: calls.py  models.py
Train/Val/: val.py
Validation/: TMVAClassification.C  getHistos.sh  output.root  readtree.cxx  readtree_RadZ.cxx  subplot  subplot.cxx  subplot.sh  toroot.py
Validation/HealthyNN/Stg1/: Histo_Tree_Loose.root  (+1 more)
ZllyAthDerivation/: .asetup.save  README.md  setup.sh
ZllyAthDerivation/run/: run.sh  sample.txt  submit.sh
ZllyAthDerivation/source/: CMakeLists.txt
(+122 files in other folders)
